# crc

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  test.sh
benchmarks/: Amazon0302-1.graph  ca-hollywood-2009-2208.graph  g1-4.graph  tech-as-skitter.graph
benchmarks/data/: WikiTalk.graph  cit-Patents.graph  web-Google.graph
benchmarks/results/: graphs.ipynb
benchmarks/results/algo1/: Amazon0302-1.csv  Amazon0302.csv  WikiTalk.csv  cit-Patents-64.csv  cit-Patents.csv  tech-as-skitter.csv  web-Google.csv
benchmarks/results/algo2/: Amazon0302-1.csv  Amazon0302.csv  WikiTalk.csv  cit-Patents-64.csv  cit-Patents.csv  tech-as-skitter.csv  web-Google.csv
include/: algo1.hpp  algo2.hpp  degreePrunning.hpp  driver.hpp  graph.hpp  utils.hpp
presentation/algo1/: g3-3.actions
presentation/algo2/: g3-3.actions
report/: Bibliography.bib  Main.tex  main.tex
report/Code/: Algo1.tex  Algo2.tex
report/Sections/: Algorithms.tex  Conclusion.tex  Evaluation.tex  FutureWork.tex  Introduction.tex
report/sections/: Algorithms.tex  Conclusion.tex  Introduction.tex
results/algo1/: Amazon0302-1.res  WikiTalk.res  cit-Patents-64.res  tech-as-skitter-111.res  web-Google.res
results/algo2/: Amazon0302-1.res  WikiTalk.res  cit-Patents-64.res  tech-as-skitter-111.res  web-Google.res
src/: CMakeLists.txt  algo1.cpp  algo1_bench.cpp  algo1_simple.cpp  algo2.cpp  algo2_bench.cpp  algo2_simple.cpp  main.cpp  max_k.cpp  viz.cpp
tests/: g1.graph  g2.graph  test.sh
tests/input/: g3.graph  g4.graph
tests/viz/: g1.gv  g2.gv  g3.gv  g4.gv
