add_executable(viz viz.cpp)
add_executable(algo1 algo1.cpp)
add_executable(algo2 algo2.cpp)

foreach(exec viz algo1 algo2)
    target_include_directories(${exec} PRIVATE ${PROJECT_SOURCE_DIR}/include)
    if (CMAKE_BUILD_TYPE STREQUAL "Release")
        target_compile_options(${exec} PRIVATE -O3)
    endif()
    if (CMAKE_BUILD_TYPE STREQUAL "Debug")
        target_compile_options(${exec} PRIVATE -g)
    endif()
endforeach()