add_executable(viz viz.cpp)
add_executable(max_k max_k.cpp)
add_executable(algo1_bench algo1_bench.cpp)
add_executable(algo2_bench algo2_bench.cpp)
add_executable(algo1_simple algo1_simple.cpp)
add_executable(algo2_simple algo2_simple.cpp)

foreach(exec viz max_k algo1_bench algo2_bench algo1_simple algo2_simple)
    target_include_directories(${exec} PRIVATE ${PROJECT_SOURCE_DIR}/include)
    if (CMAKE_BUILD_TYPE STREQUAL "Release")
        target_compile_options(${exec} PRIVATE -O3 -march=native)
    endif()
    if (CMAKE_BUILD_TYPE STREQUAL "Debug")
        target_compile_options(${exec} PRIVATE -g)
    endif()
endforeach()